--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                 <!-- INICIO LINHA DO CORPO CATEGORIAS -->
                     <div class="linha">
                         <div class="col-3">
-                            <img src="assets/img/categoria-1.jpg" alt="">
+                            <img src="" alt="">
                         </div>
                         <div class="col-3">
-                            <img src="assets/img/categoria-2.jpg" alt="">
+                            <img src="" alt="">
                         </div>
                         <div class="col-3">
-                            <img src="assets/img/categoria-3.jpg" alt="">
+                            <img src="" alt="">
                         </div>
                     </div>
 
