--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <!-- INICIO MENU DE NAVEGAÇÃO -->   
                     <nav>
                         <ul id="MenuItens">
-                            <li><a href="" title="">Inicio</a></li>
+                            <li><a href="index.html" title="">Inicio</a></li>
                             <li><a href="" title="">Produtos</a></li>
                             <li><a href="" title="">Empresa</a></li>
                             <li><a href="" title="">Contatos</a></li>
@@ -44,7 +44,7 @@
                     <div class="linha">
                         <div class="col-2">
                             <h1>Escolha um novo <br> estilo de vida!</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Quos perferendis, reprehenderit deserunt</p>
+                            <p>Quem ama preserva, preservar o meio<br> ambiente é preservar a vida</p>
 
                             <br><a href="" class="btn">Mais Informações &#8594;</a>
                         </div>
