--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <h1>Escolha um novo <br> estilo de vida!</h1>
                             <p>Quem ama preserva, preservar o meio<br> ambiente é preservar a vida</p>
 
-                            <br><a href="" class="btn">Mais Informações &#8594;</a>
+                            <br><a href="paginas/informações.html" class="btn">Mais Informações &#8594;</a>
                         </div>
 
                         <div class="col-2">
