--- a/index.html
+++ b/index.html
@@ -71,12 +71,15 @@
                 <!-- INICIO LINHA DO CORPO CATEGORIAS -->
                     <div class="linha">
                         <div class="col-3">
+                            <h3>Produtos de Higiene Pessoal</h3>
                             <img src="assets/img/categoria-1.jpg" alt="categoria">
                         </div>
                         <div class="col-3">
+                            <h3>Moda Sustentável</h3>
                             <img src="assets/img/categoria-2.jpg" alt="categoria">
                         </div>
                         <div class="col-3">
+                            <h3>Casa e Decoração Ecológica</h3>
                             <img src="assets/img/categoria-3.jpg" alt="categoria">
                         </div>
                     </div>
