--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a href="index.html">Início</a></li>
                         <li><a href="#">Produtos</a></li>
                         <li><a href="#">Contatos</a></li>
-                        <li><a href="#">Minha Conta</a></li>
+                        <li><a href="paginas/conta.html">Minha Conta</a></li>
                     </ul>
                 </nav>
 
