--- a/paginas/informacoes.html
+++ b/paginas/informacoes.html
@@ -29,7 +29,7 @@
         }
 
         header img {
-            max-width: 100%;
+            max-width: 10%;
             height: auto;
         }
 
@@ -46,9 +46,8 @@
         }
 
         header a {
-            text-decoration: none;
+            font-size: 30px;
             padding: 5px;
-            display: inline-block;
         }
 
         header a:hover {
@@ -171,7 +170,7 @@
     <header>
         <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html"><ion-icon name="home-outline"></ion-icon></a></li>
         </ul>
     </header>
     <main>
@@ -339,5 +338,7 @@
             Outro ponto a ser considerado é a conscientização de todos os membros da família sobre a importância da reciclagem. Crianças e adultos podem participar ativamente desse processo, transformando a reciclagem em um hábito saudável e necessário para o bem-estar do planeta.
         </p>        
     </main>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
