--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -72,7 +72,39 @@
       margin: 10px;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: left;
     }
+
+    input {
+      border-radius: 3px;
+      border: 1px solid black;
+      padding: 3px;
+      font-weight: bold;
+    }
+
+    label {
+      font-size: 1.1em;
+      font-weight: bold;
+    }
+
+    #enviar {
+            background-color: rgb(31, 199, 31);
+            border-radius: 10px;
+            padding: 6px;
+            border: 0px;
+            font-weight: bold;
+            margin-left: 10px;
+        }
+        
+        #limpar {
+            background-color: rgb(231, 49, 49);
+            border-radius: 10px;
+            padding: 6px;
+            border: 0px;
+            font-weight: bold;
+            margin-left: 4px;
+        }
+
     .item {
       display: flex;
       justify-content: space-between;
@@ -216,7 +248,7 @@
 
   <div class="profile-pic"><ion-icon name="person-outline"></ion-icon></div>
 
-  <div class="content">
+  <!-- <div class="content">
     <div class="item">
       <span>Nome Completo</span>
       <span>Juarez</span>
@@ -242,7 +274,34 @@
       <span>Email</span>
       <span>jurandi@gmail.com</span>
     </div>
-  </div>
+  </div> -->
+
+  <form class="content" action="" method="get">
+    <p>
+      <label for="inome">Nome</label>
+      <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
+    </p>
+    <p>
+      <input type="radio" name="sexo" id="imas"> <label for="imas">Masculino</label>
+      <input type="radio" name="sexo" id="ifem"> <label for="ifem">Feminino</label>
+    </p>
+    <p>
+      <label for="idat">Data de Nascimento</label>
+      <input type="date" name="dat" id="idat">
+    </p>
+    <p>
+      <label for="itel">Telefone</label>
+      <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2})\d{4,5}-\d{4}$" placeholder="(XX)XXXXX-XXXX" >
+    </p>
+    <p>
+      <label for="iemail">Email</label>
+      <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="seuemail@gmail.com">
+    </p>
+    <p>
+            <input id="enviar" type="submit" value="Enviar">
+            <input id="limpar" type="reset" value="Limpar">
+        </p>
+  </form>
 
   <div class="educacao-ambiental">
     <h2>🎓 Seu Progresso de Aprendizado</h2>
