alterações de cor

--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -88,7 +88,7 @@
     }
 
     #enviar {
-            background-color: rgb(31, 199, 31);
+            background-color: #83c716;
             border-radius: 10px;
             padding: 6px;
             border: 0px;
@@ -97,7 +97,7 @@
         }
         
         #limpar {
-            background-color: rgb(231, 49, 49);
+            background-color: rgb(221, 48, 48);
             border-radius: 10px;
             padding: 6px;
             border: 0px;
