--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul id="MenuItens">
                         <li><a href="index.html">Início</a></li>
                         <li><a href="#">Produtos</a></li>
-                        <li><a href="#">Contatos</a></li>
+                        <li><a href="paginas/contatos.html">Contatos</a></li>
                         <li><a href="paginas/conta.html">Minha Conta</a></li>
                     </ul>
                 </nav>
