--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -3,40 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <style>
-    body {
-      background-color: #f0f0f0;
-      padding: 40px;
-      font-family: Arial, sans-serif;
-    }
+        body {
+        background-color: #f0f0f0;
+        padding: 40px;
+        font-family: Arial, sans-serif;
+        }
 
-    .caixa {
-      background-color: #ffffff;
-      padding: 30px;
-      border-radius: 12px;
-      max-width: 400px;
-      margin: auto;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
+        header {
+            background: linear-gradient(to right, #597729, #83c716);
+            color: white;
+            margin: auto;
+            width: 430px;
+            padding: 20px;
+            text-align: center;
+            position: relative;
+            border-radius: 10px;
+        }
 
-    h1 {
-      text-align: center;
-      color: #003049;
-    }
+        header img {
+            max-width: 10%;
+            height: auto;
+            margin-left: -90%;
+            margin-top: -1%;
+        }
 
-    h2 {
-      font-size: 1.1em;
-      color: #555;
-      margin-bottom: 10px;
-    }
+        header ul {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            list-style-type: none;
+            font-weight: bolder;
+        }
+
+        header ul li {
+            color: white;
+        }
+
+        header a {
+            font-size: 30px;
+            padding: 5px;
+        }
+
+        header a:hover {
+            background-color: black;
+            transition: 0.5s;
+            padding: 8px;
+            border-radius: 20px;
+        }
+
+        header a:visited {
+            color: white;
+        }
+
+        .caixa {
+        background-color: #ffffff;
+        padding: 30px;
+        border-radius: 12px;
+        max-width: 400px;
+        margin: auto;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+        text-align: center;
+        color: #003049;
+        }
+
+        h2 {
+        font-size: 1.1em;
+        color: #555;
+        margin-bottom: 10px;
+        }
   </style>
 </head>
 <body>
+    <header>
+        <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
+            <ul>
+                <li><a href="../index.html"><ion-icon name="home-outline"></ion-icon></a></li>
+            </ul>
+    </header>
   <div class="caixa">
     <h1>Contatos</h1>
     <h2>Nome: EcoMarket-Samavi</h2>
     <h2>Telefone: (77) 99191-7432</h2>
     <h2>Gmail: RafaOliveira84555@gmail.com</h2>
   </div>
+  
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
