--- a/paginas/informacoes.html
+++ b/paginas/informacoes.html
@@ -67,6 +67,10 @@
             background-color: white;
         }
 
+        main h1 {
+            line-height: 30px;
+        }
+
         main ul {
             padding-left: 20px;
         }
