identação no código e ajustes visuais

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2 class="titulo">Nossas Categorias</h2>
             <div class="linha">
                 <article class="col-3">
-                    <h3>Produtos de Higiene Pessoal</h3>
+                    <h3>Higiene Pessoal</h3>
                     <img src="assets/img/categoria-1.jpg" alt="Produtos de higiene sustentáveis">
                 </article>
                 <article class="col-3">
@@ -73,7 +73,7 @@
                     <img src="assets/img/categoria-2.jpg" alt="Moda ecológica">
                 </article>
                 <article class="col-3">
-                    <h3>Casa e Decoração Ecológica</h3>
+                    <h3>Decoração Ecológica</h3>
                     <img src="assets/img/categoria-3.jpg" alt="Decoração sustentável">
                 </article>
             </div>
