adicionado a página de produtos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!-- MENU PRINCIPAL -->
                 <nav>
                     <ul id="MenuItens">
-                        <li><a href="#">Produtos</a></li>
+                        <li><a href="paginas/produtos.html">Produtos</a></li>
                         <li><a href="paginas/contatos.html">Contatos</a></li>
                         <li><a href="paginas/conta.html">Minha Conta</a></li>
                     </ul>
