--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="carrinho-total" id="total-carrinho">Total: R$ 0,00</div>
                         <div class="carrinho-botoes">
                             <button class="btn-limpar" onclick="limparCarrinho()">Limpar Carrinho</button>
-                            <button class="btn-finalizar">Finalizar Compra</button>
+                            <button id="finalizar-compra" class="btn-finalizar">Finalizar Compra</button>
                         </div>
                     </div>
                 </div>
