--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -289,6 +289,34 @@
         .feedback.show {
             transform: translateY(0);
         }
+
+        @media screen and (min-width:481px) {
+            header h1 {
+                font-size: 30px;
+            }
+
+            #subtitulo {
+                font-size: 25px;
+            }
+
+            main aside h2 {
+                font-size: 20px;
+            }
+        }
+
+        @media screen and (max-width:640px ) {
+            header h1 {
+                font-size: 30px;
+            }
+
+            #subtitulo {
+                font-size: 25px;
+            }
+
+            main aside h2 {
+                font-size: 20px;
+            }
+        }
     </style>
 </head>
 
