--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="EcoMarket - Produtos ecológicos e sustentáveis">
     <link rel="stylesheet" href="assets/estilo/style.css">
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <title>EcoMarket-SAMAVI | Produtos Sustentáveis</title>
+    <title>EcoMarket-SAMAVI</title>
 </head>
 <body>
     <!-- CABEÇALHO -->
