--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -286,7 +286,7 @@
     </div>
   </div> -->
 
-  <form class="content" action="" method="get">
+  <form class="content" action="../api/cadastro.js" method="post">
     <p>
       <label for="inome">Nome</label>
       <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
