--- a/paginas/informacoes.html
+++ b/paginas/informacoes.html
@@ -16,7 +16,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: black url(img/fundo.png) no-repeat center center /cover fixed;
+            background: black url(../assets/img/fundo.png) no-repeat center center /cover fixed;
         }
 
         header {
@@ -182,7 +182,7 @@
         </p>
 
         <div id="img-1">
-            <img src="img/lata.jpg" alt="Latas de lixo coloridas para reciclagem">
+            <img src="../assets/img/lata.jpg" alt="Latas de lixo coloridas para reciclagem">
         </div>
 
         <h2 style="color: black; box-shadow:none">A Importância da Reciclagem</h2>
