--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -249,6 +249,10 @@
             <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="seuemail@gmail.com">
         </p>
         <p>
+            <label for="isenha">Senha</label>
+            <input type="password" name="senha" id="isenha" required minlength="6">
+        </p>
+        <p>
             <input id="enviar" type="submit" value="Enviar">
             <input id="limpar" type="reset" value="Limpar">
         </p>
