--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
             </div>
         </section>
     </main>
-    <script src="/assets/js/auth.js"></script>
+    <script src="/assets/js/auth.js" defer></script>
 </body>
 </html>
