--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a), faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="../api/login.js" method="post" autocomplete="on">
+                <form id="form-login" action="../api/login.js" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-icons">person</span>
                         <input type="email" name="email" id="iemail" placeholder="seu e-mail" autocomplete="email" required maxlength="40">
