--- a/paginas/home.html
+++ b/paginas/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="EcoMarket - Produtos ecológicos e sustentáveis">
-    <link rel="stylesheet" href="assets/estilo/style.css">
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/estilo/style.css">
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <title>EcoMarket-SAMAVI</title>
 </head>
 <body>
@@ -15,15 +15,15 @@
             <!-- BARRA DE NAVEGAÇÃO -->
             <nav class="navbar">
                 <div class="logo">
-                    <img src="assets/img/verde-300.png" alt="Logo EcoMarket" width="125">
+                    <img src="../assets/img/verde-300.png" alt="Logo EcoMarket" width="125">
                 </div>
 
                 <!-- MENU PRINCIPAL -->
                 <nav>
                     <ul id="MenuItens">
-                        <li><a href="paginas/produtos.html">Produtos</a></li>
-                        <li><a href="paginas/contatos.html">Contatos</a></li>
-                        <li><a href="paginas/conta.html">Minha Conta</a></li>
+                        <li><a href="../paginas/produtos.html">Produtos</a></li>
+                        <li><a href="../paginas/contatos.html">Contatos</a></li>
+                        <li><a href="../paginas/conta.html">Minha Conta</a></li>
                     </ul>
                     <p id="saudacao"></p>
                 </nav>
@@ -43,7 +43,7 @@
                 </div>
 
                 <!-- MENU MOBILE -->
-                <img src="assets/img/menu.png" alt="Menu Mobile" class="menu-celular" onclick="menucelular()">
+                <img src="../assets/img/menu.png" alt="Menu Mobile" class="menu-celular" onclick="menucelular()">
             </nav>
 
             <!-- HERO BANNER -->
@@ -51,10 +51,10 @@
                 <div class="col-2">
                     <h1>Escolha um novo <br> estilo de vida!</h1>
                     <p>Quem ama preserva, preservar o meio <br> ambiente é preservar a vida</p> <br>
-                    <a href="paginas/informacoes.html" class="btn">Mais Informações &#8594;</a>
+                    <a href="../paginas/informacoes.html" class="btn">Mais Informações &#8594;</a>
                 </div>
                 <div class="col-2">
-                    <img src="assets/img/a.png" alt="Estilo de vida sustentável">
+                    <img src="../assets/img/a.png" alt="Estilo de vida sustentável">
                 </div>
             </section>
         </div>
@@ -67,15 +67,15 @@
             <div class="linha">
                 <article class="col-3">
                     <h3>Higiene Pessoal</h3>
-                    <img src="assets/img/categoria-1.jpg" alt="Produtos de higiene sustentáveis">
+                    <img src="../assets/img/categoria-1.jpg" alt="Produtos de higiene sustentáveis">
                 </article>
                 <article class="col-3">
                     <h3>Moda Sustentável</h3>
-                    <img src="assets/img/categoria-2.jpg" alt="Moda ecológica">
+                    <img src="../assets/img/categoria-2.jpg" alt="Moda ecológica">
                 </article>
                 <article class="col-3">
                     <h3>Decoração Ecológica</h3>
-                    <img src="assets/img/categoria-3.jpg" alt="Decoração sustentável">
+                    <img src="../assets/img/categoria-3.jpg" alt="Decoração sustentável">
                 </article>
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="linha">
             <!-- PRODUTO 1 -->
             <article class="col-4">
-                <img src="assets/img/produto-1.jpg" alt="Shampoo Orgânico">
+                <img src="../assets/img/produto-1.jpg" alt="Shampoo Orgânico">
                 <h4>Shampoo Orgânico</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -102,7 +102,7 @@
 
             <!-- PRODUTO 2 -->
             <article class="col-4">
-                <img src="assets/img/produto-2.jpg" alt="Cotonete Reutilizável">
+                <img src="../assets/img/produto-2.jpg" alt="Cotonete Reutilizável">
                 <h4>Cotonete Reutilizável</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -116,7 +116,7 @@
 
             <!-- PRODUTO 3 -->
             <article class="col-4">
-                <img src="assets/img/produto-3.jpg" alt="Sabonete Natural">
+                <img src="../assets/img/produto-3.jpg" alt="Sabonete Natural">
                 <h4>Sabonete Natural</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -130,7 +130,7 @@
 
             <!-- PRODUTO 4 -->
             <article class="col-4">
-                <img src="assets/img/produto-4.jpg" alt="Escova de Dentes">
+                <img src="../assets/img/produto-4.jpg" alt="Escova de Dentes">
                 <h4>Escova de Dentes</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -149,7 +149,7 @@
         <div class="linha">
             <!-- PRODUTO 5 -->
             <article class="col-4">
-                <img src="assets/img/produto-5.jpg" alt="Camiseta de Algodão Orgânico">
+                <img src="../assets/img/produto-5.jpg" alt="Camiseta de Algodão Orgânico">
                 <h4>Camiseta de Algodão Orgânico</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -163,7 +163,7 @@
 
             <!-- PRODUTO 6 -->
             <article class="col-4">
-                <img src="assets/img/produto-6.jpg" alt="Bolsa Reciclável">
+                <img src="../assets/img/produto-6.jpg" alt="Bolsa Reciclável">
                 <h4>Bolsa Reciclável</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -177,7 +177,7 @@
 
             <!-- PRODUTO 7 -->
             <article class="col-4">
-                <img src="assets/img/produto-7.jpg" alt="Pulseira de Sementes">
+                <img src="../assets/img/produto-7.jpg" alt="Pulseira de Sementes">
                 <h4>Pulseira de Sementes</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -191,7 +191,7 @@
 
             <!-- PRODUTO 8 -->
             <article class="col-4">
-                <img src="assets/img/produto-8.jpg" alt="Copo de Bambu">
+                <img src="../assets/img/produto-8.jpg" alt="Copo de Bambu">
                 <h4>Copo de Bambu</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -208,7 +208,7 @@
         <div class="linha">
             <!-- PRODUTO 9 -->
             <article class="col-4">
-                <img src="assets/img/produto-9.jpg" alt="Vela de Soja">
+                <img src="../assets/img/produto-9.jpg" alt="Vela de Soja">
                 <h4>Vela de Soja</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -222,7 +222,7 @@
 
             <!-- PRODUTO 10 -->
             <article class="col-4">
-                <img src="assets/img/produto-10.jpg" alt="Toalha de Algodão Orgânico">
+                <img src="../assets/img/produto-10.jpg" alt="Toalha de Algodão Orgânico">
                 <h4>Toalha de Algodão Orgânico</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -236,7 +236,7 @@
 
             <!-- PRODUTO 11 -->
             <article class="col-4">
-                <img src="assets/img/produto-11.jpg" alt="Jarra de Vidro Reciclado">
+                <img src="../assets/img/produto-11.jpg" alt="Jarra de Vidro Reciclado">
                 <h4>Jarra de Vidro Reciclado</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
@@ -250,7 +250,7 @@
 
             <!-- PRODUTO 12 -->
             <article class="col-4">
-                <img src="assets/img/produto-12.jpg" alt="Vasos Artesanais">
+                <img src="../assets/img/produto-12.jpg" alt="Vasos Artesanais">
                 <h4>Vasos Artesanais</h4>
                 <div class="classificacao" aria-label="5 estrelas">
                     <ion-icon name="star"></ion-icon>
