--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -253,7 +253,7 @@
     <h1>Perfil</h1>
     <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
     <ul>
-      <li><a href="../index.html"><ion-icon name="home-outline"></ion-icon></a></li>
+      <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
     </ul>
   </header>
 
