--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -88,7 +88,7 @@
 <body>
     <header>
         <ul>
-            <li><a href="../index.html"><ion-icon name="home-outline"></ion-icon></a></li>
+            <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
         </ul>
     </header>
     <main>
