--- a/paginas/home.html
+++ b/paginas/home.html
@@ -30,7 +30,7 @@
 
                 <!-- CARRINHO DE COMPRAS -->
                 <div class="carrinho-icone">
-                    <img src="assets/img/carrinho.png" alt="Carrinho de Compras" width="30" height="30">
+                    <img src="../assets/img/carrinho.png" alt="Carrinho de Compras" width="30" height="30">
                     <span id="contador-carrinho">0</span>
                     <div class="carrinho-dropdown" id="carrinho-dropdown">
                         <div id="lista-carrinho"></div>
