--- a/paginas/informacoes.html
+++ b/paginas/informacoes.html
@@ -171,7 +171,7 @@
     <header>
         <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
         <ul>
-            <li><a href="../index.html"><ion-icon name="home-outline"></ion-icon></a></li>
+            <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
         </ul>
     </header>
     <main>
