--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -328,7 +328,7 @@
         <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
         <div class="header-controls">
             <ul>
-                <li><a href="../index.html"><ion-icon name="home-outline"></ion-icon></a></li>
+                <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
             </ul>
             <div class="carrinho-icone" id="carrinho-icone">
                 <img src="../assets/img/carrinho.png" alt="Carrinho de Compras">
