--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -251,7 +251,7 @@
 
   <header>
     <h1>Perfil</h1>
-     <p id="saudacao"></p>
+    <h2 id="saudacao"></h2>
     <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
     <ul>
       <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
