--- a/paginas/home.html
+++ b/paginas/home.html
@@ -9,6 +9,15 @@
     <title>EcoMarket-SAMAVI</title>
 </head>
 <body>
+    <script>
+        // Proteção de Rota (deve ser o PRIMEIRO script da página)
+        const usuario = JSON.parse(localStorage.getItem('usuarioLogado'));
+
+        if (!usuario || !usuario.email) { // Verifica tanto a existência quanto dados válidos
+        localStorage.removeItem('usuarioLogado'); // Limpa dados corrompidos
+        window.location.href = '/login.html?redirect=' + encodeURIComponent(window.location.pathname);
+}
+</script>
     <!-- CABEÇALHO -->
     <header class="banner">
         <div class="container">
@@ -26,6 +35,7 @@
                         <li><a href="../paginas/conta.html">Minha Conta</a></li>
                     </ul>
                     <p id="saudacao"></p>
+                    <button onclick="logout()">Sair</button>
                 </nav>
 
                 <!-- CARRINHO DE COMPRAS -->
@@ -289,6 +299,12 @@
                 saudacaoElement.textContent = `Olá, ${usuarioLogado.nome}!`;
             }
         }
+    </script>
+    <script>
+    function logout() {
+        localStorage.removeItem('usuarioLogado');
+        window.location.href = '/login.html';
+    }
     </script>
 </body>
 </html>
