--- a/paginas/home.html
+++ b/paginas/home.html
@@ -30,11 +30,11 @@
                 <!-- MENU PRINCIPAL -->
                 <nav>
                     <ul id="MenuItens">
+                        <li><p id="saudacao"></p></li>
                         <li><a href="../paginas/produtos.html">Produtos</a></li>
                         <li><a href="../paginas/contatos.html">Contatos</a></li>
                         <li><a href="../paginas/conta.html">Minha Conta</a></li>
                     </ul>
-                    <p id="saudacao"></p>
                     <button onclick="logout()">Sair</button>
                 </nav>
 
