--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -81,10 +81,29 @@
     }
 
     input {
-      border-radius: 3px;
+      border-radius: 5px;
       border: 1px solid black;
-      padding: 3px;
+      padding: 4px;
       font-weight: bold;
+    }
+
+    input[type=text] {
+      padding: 10px;
+      font-size: 18px;
+      width: 50%;
+      height: 10px;
+    }
+
+    input[type=tel] {
+      font-size: .9em;
+    }
+
+    input[type=email] {
+      width: 52%;
+    }
+
+    input[type=password] {
+      width: 51%;
     }
 
     label {
@@ -93,18 +112,18 @@
     }
 
     #enviar {
-      background-color: #83c716;
+      background-color: #83c716e0;
       border-radius: 10px;
-      padding: 6px;
+      padding: 10px;
       border: 0px;
       font-weight: bold;
       margin-left: 10px;
     }
 
     #btn-logout {
-      background-color: rgb(221, 48, 48);
+      background-color: rgba(221, 48, 48, 0.911);
       border-radius: 10px;
-      padding: 6px;
+      padding: 10px;
       border: 0px;
       font-weight: bold;
       margin-left: 4px;
