--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     
                     <input type="submit" value="Entrar">
-                    <a href="registro.html" class="botao">Crie sua conta<span class="material-icons">mail</span><a>
+                    <a href="./paginas/registro.html" class="botao">Crie sua conta<span class="material-icons">mail</span><a>
                 </form>
             </div>
         </section>
