--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,10 +53,29 @@
         }
 
         input {
-            border-radius: 3px;
+            border-radius: 5px;
             border: 1px solid black;
-            padding: 3px;
+            padding: 4px;
             font-weight: bold;
+        }
+
+        input[type=text] {
+            padding: 10px;
+            font-size: 18px;
+            width: 50%;
+            height: 10px;
+        }
+
+        input[type=tel] {
+            font-size: .9em;
+        }
+
+        input[type=email] {
+            width: 52%;
+        }
+
+        input[type=password] {
+            width: 51%;
         }
 
         label {
@@ -209,7 +229,8 @@
                 grid-template-columns: 1fr 1fr;
             }
 
-            .content,.educacao-ambiental {
+            .content,
+            .educacao-ambiental {
                 max-width: 600px;
                 margin: 10px auto;
             }
@@ -385,4 +406,5 @@
         window.onload = carregarPergunta;
     </script>
 </body>
+
 </html>
