--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -274,6 +274,10 @@
             <input type="password" name="senha" id="isenha" required minlength="6">
         </p>
         <p>
+            <label for="iconfirmasenha">Confirme a Senha</label>
+            <input type="password" id="iconfirmasenha" minlength="6">
+        </p>
+        <p>
             <input id="enviar" type="submit" value="Enviar">
             <input id="limpar" type="reset" value="Limpar">
         </p>
