--- a/paginas/home.html
+++ b/paginas/home.html
@@ -9,7 +9,7 @@
     <title>EcoMarket-SAMAVI</title>
 </head>
 <body>
-    <script>
+    <!-- <script>
         // Proteção de Rota (deve ser o PRIMEIRO script da página)
         const usuario = JSON.parse(localStorage.getItem('usuarioLogado'));
 
@@ -17,7 +17,7 @@
         localStorage.removeItem('usuarioLogado'); // Limpa dados corrompidos
         window.location.href = '/login.html?redirect=' + encodeURIComponent(window.location.pathname);
 }
-</script>
+</script> -->
     <!-- CABEÇALHO -->
     <header class="banner">
         <div class="container">
