--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -449,7 +449,7 @@
             }
         }
     </script>
-    <script src="../js/perfil.js" type="module"></script>
+    <script src="../assets/js/perfil.js" type="module"></script>
 </body>
 
 </html>
