--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -247,7 +247,7 @@
 
     <div class="profile-pic"><ion-icon name="person-outline"></ion-icon></div>
 
-    <form class="content" action="../api/cadastro.js" method="post">
+    <form class="content" id="form-cadastro" action="../api/cadastro.js" method="post">
         <p>
             <label for="inome">Nome</label>
             <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
