--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
-
-            </div>
+            <div id="imagem"></div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a), faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form id="form-login" action="../api/login.js" method="post" autocomplete="on">
+                <form id="form-login" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-icons">person</span>
                         <input type="email" name="email" id="iemail" placeholder="seu e-mail" autocomplete="email" required maxlength="40">
@@ -30,8 +28,8 @@
                         <label for="isenha">Senha</label>
                     </div>
                     
-                    <input type="submit" value="Entrar">
-                    <a href="./paginas/registro.html" class="botao">Crie sua conta<span class="material-icons">mail</span><a>
+                    <input type="submit" value="Entrar" id="btn-login"> <!-- Adicionei ID -->
+                    <a href="./paginas/registro.html" class="botao">Crie sua conta<span class="material-icons">mail</span></a>
                 </form>
             </div>
         </section>
