--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
             </div>
         </section>
     </main>
-    <script src="/assets/js/auth.js" defer></script>
+    <script src="./assets/js/auth.js" defer></script>
 </body>
 </html>
