--- a/paginas/home.html
+++ b/paginas/home.html
@@ -303,7 +303,7 @@
     <script>
     function logout() {
         localStorage.removeItem('usuarioLogado');
-        window.location.href = '/login.html';
+        window.location.href = '/index.html';
     }
     </script>
 </body>
