--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -409,6 +409,7 @@
 
         window.onload = carregarPergunta;
     </script>
+    <script src="../assets/js/auth.js"></script>
 </body>
 
 </html>
