--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -306,6 +306,10 @@
       <input type="password" name="senha" id="isenha" required minlength="6">
     </p>
     <p>
+      <label for="nova-senha">Confirme sua senha atual para alterações</label>
+      <input type="password" name="nova-senha" id="inova-senha" required placeholder="Sua senha atual">
+    </p>
+    <p>
       <input id="enviar" type="submit" value="Atualizar Perfil">
       <button type="button" id="btn-logout">Sair</button>
     </p>
