--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -307,7 +307,7 @@
     </p>
     <p>
       <label for="nova-senha">Nova Senha (opcional)</label>
-      <input type="password" name="nova-senha" id="inova-senha" required placeholder="Sua senha atual">
+      <input type="password" name="nova-senha" id="inova-senha" required placeholder="Nova senha">
     </p>
     <p>
       <input id="enviar" type="submit" value="Atualizar Perfil">
