--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -306,7 +306,7 @@
       <input type="password" name="senha" id="isenha" required minlength="6">
     </p>
     <p>
-      <label for="nova-senha">Nova Senha (opcional)</label>
+      <label for="inova-senha">Nova Senha (opcional)</label>
       <input type="password" name="nova-senha" id="inova-senha" required placeholder="Nova senha">
     </p>
     <p>
