--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -306,8 +306,8 @@
       <input type="password" name="senha" id="isenha" required minlength="6">
     </p>
     <p>
-      <label for="inova-senha">Nova Senha (opcional)</label>
-      <input type="password" name="nova-senha" id="inova-senha" required placeholder="Nova senha">
+      <label for="insenha">Nova Senha (opcional)</label>
+      <input type="password" name="nsenha" id="insenha" placeholder="Nova senha">
     </p>
     <p>
       <input id="enviar" type="submit" value="Atualizar Perfil">
