--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -285,8 +285,8 @@
       <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
     </p>
     <p>
-      <input type="radio" name="sexo" id="imas"> <label for="imas">Masculino</label>
-      <input type="radio" name="sexo" id="ifem"> <label for="ifem">Feminino</label>
+      <input type="radio" name="sexo" id="imas" value="masculino"> <label for="imas">Masculino</label>
+      <input type="radio" name="sexo" id="ifem" value="feminino"> <label for="ifem">Feminino</label>
     </p>
     <p>
       <label for="idat">Data de Nascimento</label>
